@@ -28,6 +28,8 @@ Misc:
  - Qt: Remove use of NaN
  - FFmpeg: Update dependencies on Ubuntu
  - All: Allow use of external minizip library
+ - GBA Video: Null renderer should return proper register values
+ - Libretro: Disable logging game errors, BIOS calls and stubs in release builds
 
 0.4.0: (2016-02-02)
 Features:
